# dotfiles

./: .ansible-lint  .editorconfig  .flake8  .gitignore  .gitleaks.toml  .luarc.json  .markdownlint.yaml  .prettierignore  .sops.yaml  .yamlfmt  .yamllint.yaml  AGENTS.md  LICENSE  Makefile  __main__.py  ansible.cfg  bashrc  bootstrap.sh  checkout_repositories.sh  coc-settings.json  config.sh  config_system.sh  config_user.sh  disk_usage.sh  dotfiles.sh  evdev.xml  flake.nix  gitconfig  history.md  inputrc  inventory.yaml  keybinds.md  license.md  main.py  main.sh  makefile  manual_tests.md  nix_repro.md  notes.md  package-lock.json  (+17 more)
.github/: copilot-instructions.md
.github/workflows/: workflow.yml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
bash/: bashrc  colors.sh  config_bash.sh  inputrc  system.sh  user.sh
chrome/: system.sh
clipboard/: system.sh
cmd_utils/: cmd_utils.fish  key_bindings.fish  system.sh  user.sh
cmd_utils/fish_functions/: c.fish  l.fish  la.fish  ll.fish
common_utils/: system.sh
docker/: config_docker.sh  system.sh  user.sh
dotfiles_py/: __main__.py  cli.py  utils.py
dotfiles_py/data/: lorem_ipsum
dotfiles_py/data/hooks/: pre-commit
dotfiles_py/data/scripts/: google_takeout.sh  nvim_time.sh  roles_graph.pl  select_nvim.sh
dotfiles_py/targets/: ansible_collections.py  bootstrap.py  config.py  gnome.py  hooks.py  lint.py  noctalia.py  oh_my_posh.py  roles_graph.py  secrets.py  syms.py  update.py  update_utils.py
fish/: fish.fish  fish_plugins  system.sh  user.sh
fish/fish_functions/: l.fish  la.fish  ll.fish
fonts/: config_fonts.sh  user.sh
git/: bashrc  checkout_projects.sh  gitconfig  system.sh  user.sh
git/fish_functions/: g.fish  grl.fish  grs.fish
go/: go.fish  user.sh
gpg/: user.sh
java/: system.sh
keyboard_layouts/: evdev.xml  rnk  rnk_qwerty.klc  system.sh
konsole/: Main.profile  user.sh
latexindent/: user.sh
logitech_mx_master_3/: imwheelrc  logid.cfg
lua/: lua.fish  system.sh
mouse/: user.sh
neovim/: bashrc  checkhealth.sh  coc-settings.json  init.lua  init.vim  plugins.lua  system.sh  user.sh
neovim/fish_functions/: vd.fish  vi.fish
neovim/ftdetect/: bib.vim
neovim/ftplugin/: tex.vim
neovim/nvchad/: chadrc.lua  init.lua  mappings.lua  ui.lua
neovim/nvchad/plugins/: Navigator.lua  aerial.lua  better-escape.lua  cmp-cmdline.lua  cmp-git.lua  cmp-tmux.lua  cmp.lua  code-action-menu.lua  copilot-cmp.lua  copilot.lua  friendly-snippets.lua  gitsigns.lua  goto-preview.lua  illuminate.lua  indent-blankline.lua  init.lua  lspconfig.lua  mason.lua  null-ls.lua  small_configs.lua  surround.lua  symbols-outline.lua  tabnine.lua  tabular.lua  telescope.lua  treesitter.lua  trouble.lua  ui.lua
nix/: configuration.nix  devshell.nix  disk.nix  hardware-configuration.nix  unfree.nix
nix/home-manager/: corp.nix  home.nix  programs.nix  stylix.nix
nix/home-manager/configs/: .pydocstyle  atuin.nix  docker-cli.nix  flameshot.nix  groovylintrc.json
nix/home-manager/dconf/: rules.yaml  settings.nix
nix/home-manager/home/: packages.nix  shellAliases.nix
nix/home-manager/programs/: ai.nix  atuin.nix  bash.nix  crush.nix  docker-cli.nix  editors.nix  encryption.nix  eza.nix  filesystem.nix  fish.nix  git.nix  gnome-shell.nix  gui.nix  kitty.nix  lazygit.nix  linters.nix  lsp.nix  mypy.nix  neovim.nix  networking.nix  nix.nix  oh-my-posh.nix  other.nix  remotes.nix  ruff.nix  shell.nix  tmux.nix  toolchains.nix  vcs.nix  virtualization.nix  yazi.nix  zoxide.nix
nix/home-manager/secrets/: atuin_credentials.sops.json  corp_keys.sh.sops  keys.sh.sops  ldap.auth.sops.json  proxy.sh.sops
nix/home-manager/services/: flameshot.nix
nix/hosts/: dellxps.nix  thinkpad.nix
nix/hosts/dellxps/: hardware-configuration.nix  noctalia_monitors.nix
nix/hosts/thinkpad/: hardware-configuration.nix
nix/keyboard/: jcuken_rnk  jcuken_rnk.klc  qwerty_rnk  qwerty_rnk.klc
nix/modules/secrets/: home-manager.nix  lib.nix  nixos.nix
nix/nixpkgs/: overlays.nix  unfree.nix
nix/nixpkgs/overlays/: ThroneRun.nix  custom.nix  fwupd.nix  ldaps.nix  locallib.nix  niri-tweaks.nix  nur.nix  openconnect_corp.nix  sing-box-run.nix  sops-cached.nix  sops.nix  television.nix  unstable.nix  vim-plugins.nix  wpa_supplicant.nix
nix/secrets/: atuin_credentials.sops.json  corp_auth.sops.json  corp_keys.sh.sops  corp_proxy.sh.sops  keys.sh.sops  proxy.sh.sops
nix/secrets/corp/: YTeam.nmconnection.sops  allCAs.pem  auth.sops.json  config.yaml.sops  initial_ovpn.conf.sops  keys.sh.sops  opencode.auth.json.sops  opencode.jsonc.sops  openvpn.conf.sops  osquery_enroll_secret.sops  packages_info.sops.json  (+8 more)
nix/users/: rudenkornk.nix  rudenkornk_corp.nix
nodejs/: user.sh
nvim/: init.vim  nvim.fish  system.sh  user.sh
onehalf/: user.sh
openvpn/: system.sh
powershell/: Profile.ps1  system.sh
python/: system.sh  user.sh
qbittorrent/: system.sh
ruby/: system.sh
rust/: rust.fish  user.sh
scripts/: caption.sh  checkout_projects.sh  cli.py  colors.sh  config_bash.sh  config_fish.sh  config_system.sh  config_user.sh  graph.pl  graph.py  insert_text.sh  main.py  nvim_time.sh  roles_graph.py  select_nvim.sh  setup.py  support.py  update.py  update_utils.py  utils.py
scripts/_support/: password.py  setup.py  update_utils.py  utils.py
scripts/hooks/: pre-commit
scripts/src/: cli.py  roles_graph.py  setup.py  update.py  update_utils.py  utils.py
scripts/targets/: bootstrap.py  config.py  gnome.py  lint.py  update_utils.py
slack/: system.sh
ssh/: ssh.fish  system.sh  user.sh
ssh/keys/: id_rsa.secret
system_utils/: system.sh
telegram/: system.sh
tilda/: user.sh
tmux/: bashrc  system.sh  tmux.conf  tmux.fish  user.sh
tmux/fish_functions/: tmux.fish
ultisnips/: cmake.snippets  tex.snippets
vim/: bashrc  coc-settings.json  gvimrc  system.sh  user.sh  vimrc
vim/ftplugin/: cpp.vim  tex.vim
vim/ultisnips/: tex.snippets
vscode/: system.sh
windows_terminal/: raduim  theme_converter.lua  user.sh
wsl/: system.sh
xfce4/: config_xfce4.sh
zoom/: system.sh
(+605 files in other folders)
