[project]
name = "dotfiles"
version = "1.0.0"
description = "NixOS configuration for setting up personal machines."
readme = "readme.md"
requires-python = ">=3.13"
license = "MIT"

dependencies = [
  # CLI tools.
  "typer>=0.16.0", # Primary CLI engine.
  "click>=8.1.7",  # Used for some typer tweaking.
  "rich>=14.0.0",

  # Support tools.
  "ruamel-yaml>=0.18.6",

  # Linters.
  "mdformat-config>=0.2.1",
  "mdformat-ruff>=0.1.3",
  "mdformat-shfmt>=0.2.0",
  "mdformat-tables>=1.0.0",
  "mdformat-toc>=0.3.0",
  "mdformat-web>=0.2.0",
  "mdformat>=0.7.22",
  "mypy>=1.11.1",
  "yamllint>=1.35.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dotfiles_py"]

[project.scripts]
dotfiles = "dotfiles_py:cli.app"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  # warning: `one-blank-line-before-class` (D203) and
  #          `no-blank-line-before-class`  (D211) are incompatible.
  #          Ignoring `one-blank-line-before-class`.
  "D203",
  # warning: `multi-line-summary-first-line`  (D212) and
  #          `multi-line-summary-second-line` (D213) are incompatible.
  #          Ignoring `multi-line-summary-second-line`.
  "D213",
  # "Missing docstring"
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D107",
  # "Logging statement uses f-string"
  # I personally don't find performance concerns reasonable enough.
  "G004",
  # "Prefer absolute imports over relative imports from parent modules"
  "TID252",


  # warning: The following rules may cause conflicts when used with the formatter: `COM812`, `ISC001`.
  # COM812: Checks for the absence of trailing commas.
  # ISC001: Checks for implicitly concatenated strings on a single line.
  "COM812",
  "ISC001",
]


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.pylint]
max-line-length = 120
disable = [
  "logging-fstring-interpolation",
  "logging-not-lazy",
  "missing-docstring",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-locals",
  "too-many-branches",
  "too-many-instance-attributes",
]

# https://stackoverflow.com/a/78218489/8099151
[tool.pylint.typecheck]
signature-mutators = [
  "click.decorators.option",
  "click.decorators.argument",
  "click.decorators.version_option",
  "click.decorators.help_option",
  "click.decorators.pass_context",
  "click.decorators.confirmation_option",
  "dotfiles_py.utils.makelike",
]

[tool.typos]
# See https://github.com/crate-ci/typos/blob/master/docs/reference.md#example-configurations
default.extend-ignore-re = [
  "(?Rm)^.*(#|//|<!--)\\s*typos:\\s*ignore",
  "(?s)(#|//|<!--)\\s*typos:\\s*off.*?(#|//|<!--)\\s*typos:\\s*on",
]
files.extend-exclude = ["lazy-lock.json", "*.sops", "*.sops.json", "*.sops.yaml", "*.klc"]

[tool.mypy]
strict = true
exclude = [
  '^result/',
]

[tool.pydocstyle]
ignore = ["D100", "D103"]
